Corrected the issues outlined in the code review